# PrivacyWallet

./: .gitignore  .npmrc  README.rst  bump.js  cose.html  indexOld.html  package-lock.json  package.json  pubcred.html  pyproject.toml  rollup.config.js  rsync_exclude.txt  tasks.py  valuesets.js  wbgen  workbox-config.js
js/: apponsen.js  base45-js.js  cbor.js  cose.js  cwt.js  testcwt.js
www/: admin.html  cose.html  demo.html  design.html  dexie.html  diag.html  dump-db.html  index.html  indexOld.html  indexVueling.html  index_puntacana.html  indexcopy.html  issuer.html  issuerOld.html  manifest.json  onsen.html  passenger.html  sw.js  sw.js.map  tests.html  tubo.html  vuelingHeader.html  workbox-17636464.js  workbox-17636464.js.map  zxing.html
www/assets/: all_jwk_keys.json
www/components/: hcertdetails.js  navbar.js
www/css/: mystyles.css  prism.css  safeisland.css  safeislandmdb.css
www/js/: app.js  apponsen.js  cbor.js  cose.js  credential.js  cwt.js  db.js  forge.pem.js  install.js  main copy.js  main.js  prism.js  scanqr.js  testcwt.js  zxing.js
