[tool.poetry]
name = "privacywallet"
version = "0.1.0"
description = "A SSI wallet with privacy as the most important priority"
authors = ["Jesus Ruiz"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"
spurplus = "^2.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
